hack to fix horiz. scrollbar appearing sometimes

--- a/css/style.scss
+++ b/css/style.scss
@@ -27,7 +27,7 @@ body {
   min-width: 17rem;
   padding: 2rem 2rem 1rem 2rem;
   text-rendering: optimizeLegibility;
-  width: 100vw;
+  width: 98vw;
 }
 
 h1, h2, h3, h4 {
